--- a/src/pce-editor/src/test/pce-editor-test.html
+++ b/src/pce-editor/src/test/pce-editor-test.html
@@ -60,7 +60,8 @@
             $("#canvas").pce({
                 dataSource: function () {
                     return data;
-                }
+                },
+                height : "500px"
             });
             $("button").click(function () {
 
